noinst_LIBRARIES = \
    libgrapple.a

libgrapple_a_SOURCES = \
    dynstring.c \
    grapple_callback.c \
    grapple_callback_dispatcher.c \
    grapple_client.c \
    grapple_client_thread.c \
    grapple_comms.c \
    grapple_comms_api.c \
    grapple_confirm.c \
    grapple_connection.c \
    grapple_error.c \
    grapple_failover.c \
    grapple_group.c \
    grapple_lobby.c \
    grapple_lobbycallback.c \
    grapple_lobbyclient.c \
    grapple_lobbyclient_thread.c \
    grapple_lobbyconnection.c \
    grapple_lobbygame.c \
    grapple_lobbymessage.c \
    grapple_message.c \
    grapple_queue.c \
    grapple_server.c \
    grapple_server_thread.c \
    socket.c \
    tools.c
