noinst_LIBRARIES = \
	libgrapple.a

libgrapple_a_SOURCES = \
	dynstring.c dynstring.h \
	grapple_callback.c \
	grapple_callback_dispatcher.c \
	grapple_client.c \
	grapple_client_thread.c \
	grapple_comms.c \
	grapple_comms_api.c \
	grapple_confirm.c \
	grapple_connection.c \
	grapple_error.c \
	grapple_failover.c \
	grapple_group.c \
	grapple_lobby.c \
	grapple_lobbycallback.c \
	grapple_lobbyclient.c \
	grapple_lobbyclient_thread.c \
	grapple_lobbyconnection.c \
	grapple_lobbygame.c \
	grapple_lobbymessage.c \
	grapple_message.c \
	grapple_queue.c \
	grapple_server.c \
	grapple_server_thread.c \
	socket.c socket.h \
	tools.c tools.h prototypes.h \
	grapple.h grapple_confirm.h grapple_lobby.h grapple_protocols.h \
	grapple_callback.h grapple_connection.h grapple_lobby_internal.h grapple_queue.h \
	grapple_callback_dispatcher.h grapple_defines.h grapple_lobbycallback.h grapple_server.h \
	grapple_callback_internal.h grapple_enums.h grapple_lobbyclient_thread.h grapple_server_internal.h \
	grapple_client.h grapple_error.h grapple_lobbyconnection.h grapple_server_thread.h \
	grapple_client_internal.h grapple_error_internal.h grapple_lobbygame.h grapple_structs.h \
	grapple_client_thread.h grapple_failover.h grapple_lobbymessage.h grapple_types.h \
	grapple_comms.h grapple_group.h grapple_message.h \
	grapple_comms_api.h grapple_internal.h grapple_message_internal.h
